@@ -42,6 +42,11 @@ class BadWebserverPath(ValueError):
 
 
 class TestingHTTPRequestHandler(SimpleHTTPRequestHandler):
+    """Handles one request.
+
+    A TestingHTTPRequestHandler is instantiated for every request
+    recevied by the associated server.
+    """
 
     def log_message(self, format, *args):
         tcs = self.server.test_case_server
